# cen3031_team2

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  cen3031_team2.cpp  cen3031_team2.h
backend/: CMakeLists.txt  Makefile  README.md
backend/include/instantclient_21_13/: SDK_README
backend/include/instantclient_21_13/win32_sdk/include/: ociver.h
backend/include/instantclient_21_13/win32_sdk/lib/msvc/: oramysql.lib  oraocci21.lib  oraocci21d.lib
backend/src/: main.cpp  parse_helper.hpp  parse_helper.py  server.py  testdb.cpp
backend/src/routes/: bookmark_routes.py  feedback.py  top_queries.py  user_auth.py
backend/src/tools/: parse_helper.py  table_prepend.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  BackendTest.js  Navbar.css  Navbar.js  db_test_conn.js  index.js
frontend/src/pages/: Bookmarks.js  Comparison.js  CustomDropdown.css  CustomDropdown.js  DataViewer.js  Feedback.js  Home.css  Home.js  Login.css  Login.js  Search.css  Search.js
